--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,11 +1,11 @@
-<p>Hey there,</p>
+<p>Hello,</p>
 
-<p>Can't remember your password for <strong><%= @user.email %></strong>? That's OK, it happens. Just hit the link below to set a new one.</p>
+<p>We received a request to reset the password for your Library Management account associated with <strong><%= @user.email %></strong>.</p>
 
-<p><%= link_to "Reset my password", edit_identity_password_reset_url(sid: @signed_id) %></p>
+<p>Click the button below to set a new password:</p>
 
-<p>If you did not request a password reset you can safely ignore this email, it expires in 20 minutes. Only someone with access to this email account can reset your password.</p>
+<p><%= link_to "Reset Password", edit_identity_password_reset_url(sid: @signed_id), class: "email-button" %></p>
 
 <hr>
 
-<p>Have questions or need help? Just reply to this email and our support team will help you sort it out.</p>
+<p style="color: #666; font-size: 14px;">This link expires in 20 minutes. If you didn't request a password reset, you can safely ignore this email.</p>
